fix: animation and x-scroll on mobile

--- a/src/app/styles/App.module.scss
+++ b/src/app/styles/App.module.scss
@@ -18,17 +18,23 @@ html {
   scroll-behavior: smooth;
   text-wrap: balance;
   scrollbar-gutter: stable;
-  overflow-x: hidden;
 }
 
 body {
   background-color: $dark_08;
   color: $white;
   font-size: 16px;
+  overflow-x: hidden;
+}
+
+.page {
+  overflow-x: hidden;
 }
 
 .wrapper {
   min-height: 100svh;
+  overflow: hidden;
+  position: relative;
 }
 
 a:active, /* активная/посещенная ссылка */
