--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "typography";
 
-body .content {
+.content {
   display: flex;
   flex-direction: column;
   max-width: 1920px;
