--- a/src/widgets/banner/ui/banner.module.scss
+++ b/src/widgets/banner/ui/banner.module.scss
@@ -5,4 +5,6 @@
   text-align: center;
   font-size: 16px;
   height: 40px;
+  position: relative;
+  z-index: 20;
 }
